# HighgroundMMO

./: .gitignore  HighgroundMMO.sln  README.md
HGChat/: ChatMessage.cs  ChatService.cs  HGChat.csproj  IChatService.cs
HGPhysics/: HGPhysics.csproj  PhysicsObject.cs  PhysicsWorld.cs
HGPhysics/Collision/: BoxCollider.cs
HGPlayers/: IPlayerManager.cs  Player.cs  PlayerManager.cs
HGRooms/: IRoomManager.cs  Room.cs  RoomManager.cs
HGRooms/Exceptions/: PlayerAlreadyInRoomException.cs  PlayerNotFoundException.cs  PlayerNotInRoomException.cs  RoomFullException.cs  RoomNotFoundException.cs
HGScript/: Script.cs  ScriptLogger.cs  ScriptManager.cs
HGSerializationUtils/: HGSerializationConfig.cs  Vector2Converter.cs
HGSocketManager/: HGSocketManager.csproj  IMessageHandler.cs  ISessionManager.cs  Message.cs  Session.cs  SessionManager.cs  SocketService.cs
HGSocketManager/Exceptions/: PlayerNotInSessionException.cs  SessionNotFoundException.cs  SessionNotInRoomException.cs
HGWorld/: Entity.cs  GameWorldService.cs  HGWorld.csproj  IWorldManager.cs  World.cs  WorldManager.cs  WorldUpdates.cs
HGWorld/Player/: PlayerData.cs  PlayerInput.cs
HighgroundClient/src/: app.html
HighgroundServer/: HighgroundServer.csproj  Program.cs
HighgroundServer/Controllers/: RoomController.cs  SocketController.cs
HighgroundServer/Properties/: launchSettings.json
client/: package.json
client/src/: app.html
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/messages/: room.rs
server/src/server/: message.rs  mod.rs  room.rs
server/src/socket/: mod.rs
(+36 files in other folders)
