[package]
name = "hgserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
env_logger = "0.11"
hashbrown = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
log = "0.4"
toml = "0.8.10"
